--- a/src/stylesheets/portfolio.css
+++ b/src/stylesheets/portfolio.css
@@ -268,6 +268,9 @@ footer {
         text-align: center !important;
         padding-bottom: 20px;
     }
+    .contact-number {
+        text-align: center;
+    }
 }
 @media only screen and (max-width: 576px) {
     .video-container {
