feat: Mobile Responsive

--- a/src/stylesheets/contactBtn.css
+++ b/src/stylesheets/contactBtn.css
@@ -10,6 +10,7 @@
   letter-spacing: 2px;
   transition: all .6s;
   background-color: transparent;
+  margin-top: 10px;
 }
 
 .contact-us-wrapper:hover{
