--- a/src/stylesheets/portfolio.css
+++ b/src/stylesheets/portfolio.css
@@ -279,6 +279,15 @@ footer {
 .hero-image-photography > img {
     top: -40%;
 }
+.fade-appear {
+    opacity: 0;
+    z-index: 1;
+    transition: opacity 500ms ease-in;
+}
+  
+.fade-appear.fade-appear-active {
+    opacity: 1;
+}
 @media only screen and (max-width: 967px) {
     .contact-us-banner > div {
         font-size: 48px;
